<resources>
    <string name="app_name">OrduRehberiYönetici</string>
    <string name="hotel">Otel</string>
    <string name="restaurant">Restorant</string>
    <string name="travel_book">Gezi Kitabı</string>
    <string name="bus">Ulaşım Listesi</string>
    <string name="muzik">Müzikler</string>
    <string name="yemek">Yemekler</string>
    <string name="hayvan">Hayvancılık İşleri</string>
    <string name="tarim">Tarım Faaliyetleri</string>
    <string name="medya">Medya Kuruluşları</string>
    <string name="ulasim">Ulaşım</string>
    <string name="spor">Sporcular/Takımlar</string>
    <string name="yetkililer">Yetkililer</string>
    <string name="unluler">Sanayi Kuruluşları</string>
    <string name="egitim">Eğitim Kurumları</string>
    <string name="sanat">Etkinlikler</string>
    <string name="bitkiler">Hava Durumu</string>
    <string name="emailgiris"> E-mail adresinizi giriniz : </string>
    <string name="sifregiris"> Şifrenizi giriniz : </string>
    <string name="girisbutton">Giriş Yap</string>
    <string name="kayitbutton">Kayıt Ol </string>
    <string name="soyad">Lütfen soyadınızı giriniz: </string>
    <string name="emailkayit"> Lütfen e-mail adresinizi giriniz : </string>
    <string name="sifrekayit"> Lütfen şifrenizi giriniz : </string>
    <string name="restartsifrekayit"> Lütfen şifrenizi tekrar giriniz : </string>
    <string name="kayitbuttonkayit"> Hesabını oluştur </string>
    <string name="ad">Lütfen adınızı giriniz :</string>
    <string name="yorum">Lütfen deneyiminizi yorumlayınız: </string>
    <string name="tanitim"> Tanıtım Rehberi </string>
    <string name="lokasyo"> Seyahat Rehberi </string>
    <string name="usettings">Uygulama Ayarları</string>
    <string name="appsettings">Uygulama Hakkında</string>
    <string name="cikis">Uygulamadan Çık</string>
    <string name="changeprofilepicture">Kullanıcı Bilgileri</string>
    <string name="changeprofileemail">E-mail Adresini Güncelle </string>
    <string name="changeprofilepassword">Şifreni Güncelle</string>
    <string name="changeprofilename">Hesabını Sil</string>
    <string name="change">Güncelle</string>
    <string name="deleteaccount">Hesabını sil</string>
    <string name="newemail">Lütfen yeni e-mail adresinizi giriniz:</string>
    <string name="newsifre">Lütfen yeni şifrenizi giriniz:</string>
    <string name="newsifreiki">Lütfen yeni şifrenizi tekrar giriniz:</string>
    <string name="guncelsifre">Lütfen mevcut şifrenizi giriniz:</string>
    <string name="unuttum">Şifreni mi unuttun?</string>
    <string name="paylas">Paylaş</string>
    <string name="bilgi">Bu uygulama Ertuğrul Ocak tarafından YTÜ FBE Bilgi Teknolojileri Tezsiz Yüksek Lisans programı dersi olan Dönem Projesi için hazırlanmıştır.</string>
    <string name="silme">Hesabını silmek mi istiyorsun ? Emin misin?</string>
    <string name="adin">Kullanıcı adınız :</string>
    <string name="emailin">E-mail adresiniz :</string>
    <string name="deneyim">Hadi bizimle deneyimini paylaş!</string>
    <string name="deneyimpuan"> Deneyimin için kaç puan verirsin? </string>
    <string name="checkbox"> Buraya tekrar gelmek ister misin? </string>
    <string name="istasyonadi"> Lütfen istasyon adını giriniz : </string>
    <string name="gun">Faaliyete geçiş tarihini seç</string>
    <string name="ay">Ay:</string>
    <string name="yil">Yil:</string>
    <string name="istasyonfaaliyetyili">Lütfen istasyonun faaliyete geçtiği tarihi giriniz :</string>
    <string name="istasyonkapasite">Lütfen istasyonun yolcu kapasitesini giriniz :</string>
    <string name="istasyonekle">İstasyon Ekle </string>
    <string name="title_activity_maps">Map</string>
    <string name="itemguncelle">Güncelle</string>
    <string name="itemsil">Sil</string>
    <string name="istasyonTipi">Lütfen istasyonun tipini giriniz:</string>
    <string name="istasyonTelefon">Lütfen istasyonun telefon numarasını giriniz:</string>
    <string name="gezimekaniEkle">Gezi Kitabına Ekle </string>
    <string name="gezimekaniEkleAd">Lütfen mekanın ismini giriniz:</string>
    <string name="gezimekaniEkleNitelik">Lütfen mekanın niteliğini giriniz:</string>
    <string name="gezimekaniEkleAciklama">Lütfen mekan hakkında detaylı bilgiler giriniz:</string>
    <string name="gezimekaniEkleButonu">Mekanı Oluştur</string>
    <string name="title_activity_maps2">Map</string>
    <string name="gezimekaniKaydet">Mekanı kaydet</string>
    <string name="title_activity_maps3">Map</string>
    <string name="ara">Ara</string>
    <string name="istasyonSil">İstasyon sil</string>
    <string name="sil">Sil</string>
    <string name="restorantAdiOlustur">Restorantın adını giriniz:</string>
    <string name="restorantTipiOlustur">Mutfak türünü giriniz:</string>
    <string name="restorantTelefonuOlustur">Restorantın telefon numarasını giriniz:</string>
    <string name="restorantOrtalamaTutar">2 kişi için TL cinsinden ortalama tutar giriniz:</string>
    <string name="restorantHaftalikCalismaBilgilendirme">Haftalık çalışma saatlerinizi giriniz: </string>
    <string name="restorantpazartesi">Pazartesi günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantsali">Sali günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantcarsamba">Çarşamba günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantpersembe">Persembe günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantcuma">Cuma günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantcumartesi">Cumartesi günü çalışma saati aralığınızı giriniz:</string>
    <string name="restorantpazar">Pazar günü çalışma saati aralığınızı giriniz:</string>
    <string name="disMekan">Dış mekana sahip misiniz?</string>
    <string name="icMekan">İç mekana sahip misiniz?</string>
    <string name="sigaraAlani">Sigara içme alanına sahip misiniz?</string>
    <string name="cocukAlani">Çocuk alanına sahip misiniz?</string>
    <string name="yerindeServis">Yerinde servis hizmetine sahip misiniz?</string>
    <string name="paketServis">Paket servis hizmetine sahip misiniz?</string>
    <string name="gelAl">Gel-al hizmetine sahip misiniz?</string>
    <string name="wifi">Wi-fi hizmetine sahip misiniz?</string>
    <string name="restorantOlustur">Restorantı oluştur</string>
    <string name="restorantEkle">Restorant Ekle</string>
    <string name="restorantResimBilgisi">Restorantın görselini ekleyiniz.</string>
    <string name="restorantMenuBilgisi">Menünün görselini ekleyiniz.</string>
    <string name="deneyimGorseli">Deneyiminiz için bir görsel ekleyiniz.</string>
    <string name="istasyonGorseli">İstasyon için bir görsel ekleyiniz.</string>
    <string name="mekanGorseli">Gezi mekanı için bir görsel ekleyiniz.</string>
    <string name="pazartesiBaslangic">PZT-BAŞ</string>
    <string name="pazartesiCikis">PZT-BİT</string>
    <string name="kapali">Kapalı</string>
    <string name="saliBaslangic">SAL-BAŞ</string>
    <string name="saliCikis">SAL-BİT</string>
    <string name="carsambaBaslangic">CAR-BAŞ</string>
    <string name="carsambaCikis">CAR-BİT</string>
    <string name="persembeBaslangic">PER-BAŞ</string>
    <string name="persembeCikis">PER-BİT</string>
    <string name="cumaBaslangic">CM-BAŞ</string>
    <string name="cumaCikis">CM-BİT</string>
    <string name="cumartesiBaslangic">CMT-BAŞ</string>
    <string name="cumartesiCikis">CMT-BİT</string>
    <string name="pazarBaslangic">PZ-BAŞ</string>
    <string name="pazarCikis">PZ-BİT</string>
    <string name="restorantKaydet">Restorantı kaydet</string>
    <string name="restorantDetayiSaatBilgilendirme">Restorantın çalışma saatleri </string>
    <string name="restorantDetayiOlanaklarBilgilendirme">Restorantın olanakları </string>
    <string name="otelOlusturAd">Otelin adını giriniz:</string>
    <string name="otelOlusturResimBilgilendirme">Otelin resmini ekleyiniz</string>
    <string name="otelOlusturYildizBilgilendirme">Otelin yıldız sayısını ekleyiniz</string>
    <string name="otelOlusturWeb">Otelin web adresini giriniz:</string>
    <string name="otelOlusturTelefon">Otelin telefon numarasını giriniz:</string>
    <string name="otelOlusturOrtalamaFiyat">Otelin 4 kişilik bir aile için ortalama ücretini(TL) giriniz:</string>
    <string name="otelOlusturAciklama">Otel hakkında ayrıntılı bilgi veriniz:</string>
    <string name="otelOlusturButonu">Otel Oluştur</string>
    <string name="otelOlusturHavuz">Otelde havuz var mı?</string>
    <string name="otelOlusturSpaMasaj">Otelde Spa/Masaj hizmeti var mı?</string>
    <string name="otelOlusturSporSalonu">Otelde Spor Salonu var mı?</string>
    <string name="otelOlusturWifi">Otelde Wİ-Fİ hizmeti var mı?</string>
    <string name="otelOlusturToplantiOdasi">Otelde toplantı odası var mı?</string>
    <string name="otelOlusturParkAlani">Otelde park alanı var mı?</string>
    <string name="otelOlusturSauna">Otelde sauna hizmeti var mı?</string>
    <string name="otelOlusturEngelliUygunluk">Otel engelli bireyler için uygun mu?</string>
    <string name="otelOlusturCocukUygunluk">Otel çocuklar için uygun mu?</string>
    <string name="otelOlusturEvcilHayvanUygunluk">Otel evcil hayvanlar için uygun mu?</string>
    <string name="otelOlusturRestorant">Otelde restorant var mı?</string>
    <string name="otelOlusturBar">Otelde bar var mı?</string>
    <string name="otelOlusturAcikBufeKahvalti">Otelde açık büfe kahvaltı var mı?</string>
    <string name="otelOlusturCamasirhane">Otelde çamaşırhane var mı?</string>
    <string name="otelEkle">Otel ekle</string>
    <string name="title_activity_maps4">Map</string>
    <string name="oteliKaydet">Oteli kaydet</string>
    <string name="webeGit">Web adresine git</string>
    <string name="restorant">Yemek Deneyimi</string>
    <string name="geziKitabi">Gezi Deneyimi</string>
    <string name="istasyon">Ulaşım Deneyimi</string>
    <string name="otel">Konaklama Deneyimi</string>
    <string name="deneyimTuruBilgilendirme">Deneyim alanını seçiniz:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuBilgilendirme">Menü</string>
    <string name="otelOlanaklariBilgilendirme">Otel Olanakları</string>
    <string name="title_activity_acilis">AcilisActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="istasyonOlusturWeb">İstasyonun web adresini giriniz:</string>
    <string name="otelAciklama">Otel Hakkında</string>
    <string name="title_activity_otel_rotasi">Map</string>
    <string name="oteleYorumYap">Otel hakkındaki yorumunuzu yazınız:</string>
    <string name="yorumButonu">Yorumu paylaş</string>
    <string name="otelYorumlari">Otelin yorumlarına göz at</string>
    <string name="otelPuanBilgilendirme">Otel için bir puan verin.</string>
    <string name="restorantYorumYap">Restorant hakkındaki yorumunuzu yazınız:</string>
    <string name="restorantPuanBilgilendirme">Restorant için bir puan verin.</string>
    <string name="ilkokul">İlkokul</string>
    <string name="ortaokul">Ortaokul</string>
    <string name="lise">Lise</string>
    <string name="niversite">Üniversite</string>
    <string name="ozel_okul">Özel okul</string>
    <string name="devlet_okulu">Devlet okulu</string>
    <string name="okulhakkinda">Okul hakkında detaylı bilgiler veriniz:</string>
    <string name="okulweb">Okulun web adresini yazınız:</string>
    <string name="okul_telefon">Okulun telefon adresini yazınız:</string>
    <string name="okul_ad">Okulun adını yazınız:</string>
    <string name="okul_seviyesi">Okul Seviyesini seçiniz</string>
    <string name="okul_tipi">Okul tipini (devlet,özel) seçiniz</string>
</resources>