<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.OtelOlusturActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:id="@+id/otelOlusturAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otelOlusturAd"
            android:inputType="text"
            android:maxLength="25"
            android:textSize="18sp"
            ></EditText>

        <TextView
            android:id="@+id/otelOlusturResimBilgilendirme"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturResimBilgilendirme"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#660099"></TextView>


        <ImageView
            android:id="@+id/otelOlusturResim"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:onClick="otelGorseliEkle"
            app:srcCompat="@drawable/eklegorsel"></ImageView>

        <TextView
            android:id="@+id/otelOlusturYildizBilgilendirme"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturYildizBilgilendirme"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#660099"></TextView>


        <RatingBar
            android:id="@+id/otelOlusturYildiz"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RatingBar>


     <EditText
         android:id="@+id/otelOlusturWeb"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:maxLength="60"
         android:textSize="18sp"
         android:hint="@string/otelOlusturWeb"
         ></EditText>

    <EditText
        android:id="@+id/otelOlusturTelefon"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="20"
        android:textSize="18sp"
        android:hint="@string/otelOlusturTelefon"></EditText>


        <EditText
         android:id="@+id/otelOlusturAciklama"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:maxLength="600"
         android:textSize="16sp"
         android:hint="@string/otelOlusturAciklama"></EditText>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">


     <CheckBox
         android:id="@+id/otelOlusturHavuz"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/otelOlusturHavuz"
         android:textColor="#660099"></CheckBox>

     <CheckBox
         android:id="@+id/otelOlusturSpaMasaj"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/otelOlusturSpaMasaj"
         android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturSporSalonu"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturSporSalonu"
            android:textColor="#660099"></CheckBox>

        <CheckBox
            android:id="@+id/otelOlusturSauna"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturSauna"
            android:textColor="#660099"></CheckBox>

        <CheckBox
            android:id="@+id/otelOlusturWifi"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturWifi"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturCamasirhane"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturCamasirhane"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturRestorant"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturRestorant"
            android:textColor="#660099"></CheckBox>



        <CheckBox
            android:id="@+id/otelOlusturBar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturBar"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturAcikBufeKahvalti"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturAcikBufeKahvalti"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturParkAlani"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturParkAlani"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturToplantiOdasi"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturToplantiOdasi"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturEngelliUygunluk"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturEngelliUygunluk"
            android:textColor="#660099"></CheckBox>


        <CheckBox
            android:id="@+id/otelOlusturCocukUygunluk"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturCocukUygunluk"
            android:textColor="#660099"></CheckBox>



        <CheckBox
            android:id="@+id/otelOlusturEvcilHayvanUygunluk"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otelOlusturEvcilHayvanUygunluk"
            android:textColor="#660099"></CheckBox>

     </LinearLayout>

       <Button
           android:id="@+id/OtelOlusturButonu"
           android:layout_marginTop="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="otelEkle"
           android:text="@string/otelOlusturButonu"></Button>


    </LinearLayout>


    </ScrollView>
</LinearLayout>