<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.OrduDeneyimPaylasmaActivity">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">



         <TextView
             android:id="@+id/deneyimText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/deneyim"
             android:textSize="14sp"
             android:textColor="#660099"
             android:textAlignment="center"
             android:textStyle="bold"
             ></TextView>




         <TextView
             android:id="@+id/deneyimBilgilendirme"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/deneyimTuruBilgilendirme"
             android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="#660099"></TextView>

         <RadioGroup
             android:id="@+id/deneyimAlani"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

             <RadioButton
                 android:id="@+id/geziKitabiButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/geziKitabi"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/restorantButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/restorant"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/otelButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/otel"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/istasyonButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/istasyon"
                 android:onClick="sec"
                 ></RadioButton>

         </RadioGroup>



         <TextView
             android:id="@+id/deneyimGorseliText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/deneyimGorseli"
             android:textSize="14sp"
             android:textColor="#660099"
             android:textAlignment="center"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             ></TextView>


         <ImageView
             android:id="@+id/imageViewLokasyon"
             android:layout_width="250dp"
             android:layout_height="150dp"
             android:onClick="resimSec"
             android:layout_marginTop="10dp"
             app:srcCompat="@drawable/eklegorsel" />


         <TextView
             android:id="@+id/deneyimpuan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/deneyimpuan"
             android:textStyle="bold"
             android:textSize="14sp"
             android:textColor="#660099"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             ></TextView>


         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/yorumText"
             />


         <EditText
             android:id="@+id/yorumText"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:ems="10"
             android:hint="@string/yorum"
             android:inputType="textMultiLine"
             android:maxLength="120"
             android:textSize="14sp"
             android:layout_marginTop="20dp"
             />


         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/checkbox"
             android:layout_marginTop="20dp"
             android:textColor="#660099"
             ></com.google.android.material.checkbox.MaterialCheckBox>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonPaylas"
             android:onClick="paylas"
             android:text="@string/paylas"
             android:layout_marginTop="20dp"
             ></Button>



     </LinearLayout>



 </ScrollView>

</LinearLayout>